--- a/src/App.css
+++ b/src/App.css
@@ -1,28 +1,8 @@
-.App {
-  text-align: center;
+.App{
+    background-color: #ECF0F1;
 }
 
-.App-logo {
-  animation: App-logo-spin infinite 20s linear;
-  height: 80px;
-}
+.midbar {
 
-.App-header {
-  background-color: #222;
-  height: 150px;
-  padding: 20px;
-  color: white;
-}
-
-.App-title {
-  font-size: 1.5em;
-}
-
-.App-intro {
-  font-size: large;
-}
-
-@keyframes App-logo-spin {
-  from { transform: rotate(0deg); }
-  to { transform: rotate(360deg); }
+    background-color: #95A5A6;
 }
