--- a/src/App.css
+++ b/src/App.css
@@ -19,6 +19,10 @@
     background-color: #2c3e50;
     border: none;
     margin-top: 25px;
+    position: absolute;
+    top : 0px;
+    left: 81%;
+    z-index: 10000;
 }
 
 .btn-convert:hover{
@@ -30,4 +34,8 @@
     margin-top: 15px;
     overflow-x: scroll;
     height: 92vh;
+}
+
+.padding-zero{
+    padding: 0px !important;
 }
